# Ecommerce-CLV-Prediction

./: .gitignore  README.md  pyproject.toml
data/: 2021_customer_data.parquet  2022_customer_data.parquet
data/processed/: 2021_model_features.parquet  cleaned_2021_customer_data.parquet  cleaned_2022_customer_data.parquet  cleaned_clv_data.parquet  cleaned_features.csv  clv_table_data  clv_table_data.parquet  model_features.parquet
notebooks/: analysis.ipynb  btyd_modelling.ipynb  data_cleaning.ipynb  data_cleaning_02.ipynb  exploratory_analysis.ipynb  feature_engineering.ipynb  feature_scaling.ipynb  modelling.ipynb  segmentation_analysis.ipynb
sql/: TABLE_VIEWS.sql  TABLE_VIEWS_02.sql
src/database/: db_engine.py  queries.py
