[project]
name = "ecommerce-clv-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "numpy>=1.21,<2.0",
    "pandas>=1.5,<2.2",
    "scikit-learn>=1.2,<1.5",
    "matplotlib>=3.7,<3.9",
    "seaborn>=0.12,<0.14",
    "sqlalchemy>=1.4,<2.1",
    "psycopg2-binary>=2.9,<3.0",
    "fastparquet>=2023.4,<2024.0",
    "shap>=0.49.1",
    "xgboost>=2.1.4",
    "statsmodels>=0.14.6",
]
